--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DISCORD_CALLBACK_URL=http://localhost:3001/auth/discord/callback
 DISCORD_GUILD_ID=1212556680911650866
 SESSION_SECRET=i5vVTN3rl757mW5dMFkwV8nwAnkbVk1B
 DISCORD_BOT_TOKEN=MTM4NzE1MDI1MDMzNDA5NzYyNA.GembfZ.AEm24X2ojV3whxVwOKO_4xsMtySTFA1bbbercU
+JWT_SECRET=c456cfb6bc6f4aa446ae3ccaa46f4873
