--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "mongoose": "^8.16.0",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
