--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.2",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
