--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.57.2",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
+    "framer-motion": "^12.23.12",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
