Actualizar URLs de localhost a dominios de producción de Render
- Frontend: localhost:3001  https://spainrp-web.onrender.com
- Backend: localhost:5173  https://spainrp-oficial.onrender.com
- Bot: localhost:3020  https://tu-bot.onrender.com (placeholder)
- Shop: localhost:4002  https://tu-shop.onrender.com (placeholder)
- PPT: localhost:4001  https://tu-ppt.onrender.com (placeholder)

Archivos actualizados:
- Frontend: env.example, render.yaml, vite.config.js, App.jsx, componentes
- Backend: index.js, auth.js, routes, servicios adicionales
- Configuración: render.yaml, env.example

Listo para despliegue en Render con URLs de producción

--- a/backend/env.example
+++ b/backend/env.example
@@ -3,7 +3,7 @@ PORT=3001
 NODE_ENV=production
 
 # URLs de servicios externos
-PUBLIC_BASE_URL=https://tu-frontend.onrender.com
+PUBLIC_BASE_URL=https://spainrp-oficial.onrender.com
 BOT_API_URL=https://tu-bot.onrender.com
 BOLSA_API_URL=https://tu-bolsa.onrender.com
 ECONOMIA_API_URL=https://tu-economia.onrender.com
@@ -11,7 +11,7 @@ ECONOMIA_API_URL=https://tu-economia.onrender.com
 # Discord
 DISCORD_CLIENT_ID=tu_discord_client_id
 DISCORD_CLIENT_SECRET=tu_discord_client_secret
-DISCORD_REDIRECT_URI=https://tu-backend.onrender.com/auth/callback
+DISCORD_REDIRECT_URI=https://spainrp-web.onrender.com/auth/callback
 DISCORD_GUILD_ID=tu_guild_id
 
 # Base de datos
