--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -26,7 +26,7 @@ services:
       - key: DISCORD_CLIENT_SECRET
         sync: false
       - key: DISCORD_REDIRECT_URI
-        value: https://spainrp-backend.onrender.com/auth/callback
+        value: https://spainrp-web.onrender.com/auth/callback
       - key: DISCORD_GUILD_ID
         sync: false
       - key: DATABASE_URL
