--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,5 @@
 # URLs de servicios
-VITE_API_URL=http://localhost:3001
-VITE_BOT_URL=http://localhost:3020
-VITE_SHOP_URL=http://localhost:4002
-VITE_PPT_URL=http://localhost:4001
+VITE_API_URL=https://spainrp-oficial.onrender.com
+VITE_BOT_URL=https://spainrp-oficial.onrender.com
+VITE_SHOP_URL=https://spainrp-oficial.onrender.com
+VITE_PPT_URL=https://spainrp-oficial.onrender.com
