--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -14,6 +14,8 @@ services:
         sync: false
       - key: DISCORD_GUILD_ID
         value: "1212556680911650866"
+      - key: DISCORD_CALLBACK_URL
+        value: "https://spainrp-oficial.onrender.com/auth/discord/callback"
       - key: DISCORD_ADMIN_ROLE_ID
         sync: false
       - key: REPORTERO_ROLE_ID
@@ -21,7 +23,7 @@ services:
       - key: DISCORD_MUTE_ROLE_ID
         sync: false
       - key: BOT_API_URL
-        value: "https://spainrp-backend.onrender.com"
+        value: "https://spainrp-oficial.onrender.com"
       - key: ECONOMIA_API_URL
         value: "http://37.27.21.91:5021"
       - key: BOLSA_API_URL
