Fix backend errors: Remove duplicate route and optimize build process
- Remove duplicate /api/proxy/bolsa/activos route causing path-to-regexp error
- Update render.yaml to build frontend only once and install backend deps on start
- Backend now only runs index.js without frontend build process

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,8 @@ services:
     env: node
     plan: free
     rootDir: .
-    buildCommand: cd frontend && npm install && npx vite build && cd ../backend && npm install
-    startCommand: cd backend && npm start
+    buildCommand: cd frontend && npm install && npx vite build
+    startCommand: cd backend && npm install && npm start
     envVars:
       - key: NODE_ENV
         value: production
