Fix SPA routing for Render static hosting
- Add JavaScript SPA fallback in index.html
- Create .htaccess for Apache compatibility
- Create nginx.conf for Nginx configuration
- Update _redirects with more specific rules
- Update vercel.json with better regex patterns
- Remove routes from render.yaml (let _redirects handle it)
- Add comprehensive SPA routing support

--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -4,16 +4,12 @@ services:
     env: static
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
     envVars:
       - key: VITE_API_URL
         value: https://spainrp-web.onrender.com
       - key: VITE_BOT_URL
-        value: https://tu-bot.onrender.com
+        value: https://spainrp-web.onrender.com
       - key: VITE_SHOP_URL
-        value: https://tu-shop.onrender.com
+        value: https://spainrp-web.onrender.com
       - key: VITE_PPT_URL
-        value: https://tu-ppt.onrender.com
+        value: https://spainrp-web.onrender.com
