--- a/frontend/public/.htaccess
+++ b/frontend/public/.htaccess
@@ -1,9 +1,10 @@
 RewriteEngine On
-RewriteBase /
 
 # Handle Angular and React Router
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_URI} !^/api/
+RewriteCond %{REQUEST_URI} !^/assets/
 RewriteRule . /index.html [L]
 
 # Cache static assets
@@ -11,3 +12,8 @@ RewriteRule . /index.html [L]
     ExpiresActive On
     ExpiresDefault "access plus 1 year"
 </FilesMatch>
+
+# Security headers
+Header always set X-Frame-Options DENY
+Header always set X-Content-Type-Options nosniff
+Header always set Referrer-Policy strict-origin-when-cross-origin
