--- a/frontend/public/nginx.conf
+++ b/frontend/public/nginx.conf
@@ -15,9 +15,8 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
-    # API routes should not be redirected
-    location /api/ {
-        # This would be handled by the backend
-        return 404;
-    }
+    # Security headers
+    add_header X-Frame-Options DENY;
+    add_header X-Content-Type-Options nosniff;
+    add_header Referrer-Policy strict-origin-when-cross-origin;
 }
