--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -3,6 +3,10 @@ services:
     name: spainrp-oficial
     buildCommand: npm install && npm run build
     staticPublishPath: ./dist
+    routes:
+      - type: rewrite
+        source: "/*"
+        destination: "/index.html"
     envVars:
       - key: VITE_API_URL
         value: https://spainrp-web.onrender.com
