--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DISCORD_GUILD_ID=1212556680911650866
 DISCORD_CLIENT_ID=1387150250334097624
 DISCORD_CLIENT_SECRET=i5vVTN3rl757mW5dMFkwV8nwAnkbVk1B
-DISCORD_CALLBACK_URL=http://localhost:3001/auth/discord/callback
+DISCORD_CALLBACK_URL=https://spainrp-oficial.onrender.com/auth/discord/callback
 DISCORD_GUILD_ID=1212556680911650866
 SESSION_SECRET=i5vVTN3rl757mW5dMFkwV8nwAnkbVk1B
 DISCORD_BOT_TOKEN=MTM4NzE1MDI1MDMzNDA5NzYyNA.GembfZ.AEm24X2ojV3whxVwOKO_4xsMtySTFA1bbbercU
