--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,15 @@
 {
   "rewrites": [
     {
-      "source": "/((?!api|_next|_static|favicon.ico).*)",
+      "source": "/((?!api|assets|_next|_static|favicon.ico).*)",
       "destination": "/index.html"
+    }
+  ],
+  "redirects": [
+    {
+      "source": "/((?!api|assets|_next|_static|favicon.ico).*)",
+      "destination": "/index.html",
+      "permanent": false
     }
   ]
 }
