FIX: Correct double slash issue in Discord OAuth URL
- Fix double slash in Discord OAuth URL construction
- Add proper URL normalization in App.jsx
- Fix Socket.IO URL construction
- Update env.example to use correct API URL
- Remove trailing slashes before concatenating paths
- This should fix 'Cannot GET //auth/discord' error

--- a/frontend/env.example
+++ b/frontend/env.example
@@ -1,5 +1,6 @@
 # URLs de servicios
-VITE_API_URL=https://spainrp-oficial.onrender.com
-VITE_BOT_URL=https://spainrp-oficial.onrender.com
-VITE_SHOP_URL=https://spainrp-oficial.onrender.com
-VITE_PPT_URL=https://spainrp-oficial.onrender.com
+VITE_API_URL=https://spainrp-web.onrender.com
+VITE_BOT_URL=https://spainrp-web.onrender.com
+VITE_SHOP_URL=https://spainrp-web.onrender.com
+VITE_PPT_URL=https://spa
+inrp-web.onrender.com
