FIX: Resolve session persistence issues in Discord OAuth
- Remove duplicate session configuration that was causing conflicts
- Improve session configuration with production-ready settings
- Add SESSION_SECRET environment variable for better security
- Configure secure cookies for production environment
- Add specific session name to avoid conflicts
- Fix session not persisting after successful Discord login

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -22,6 +22,8 @@ services:
         value: "1384340819590512700"
       - key: DISCORD_MUTE_ROLE_ID
         sync: false
+      - key: SESSION_SECRET
+        value: "i5vVTN3rl757mW5dMFkwV8nwAnkbVk1B"
       - key: BOT_API_URL
         value: "https://spainrp-oficial.onrender.com"
       - key: ECONOMIA_API_URL
