FEAT: Add maintenance mode with environment variable
- Add MAINTENANCE_MODE environment variable support
- Create beautiful maintenance page with glassmorphism design
- Add maintenance mode check before all routes
- Configure MAINTENANCE_MODE in render.yaml (default: false)
- Easy toggle via Render dashboard environment variables

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -24,6 +24,8 @@ services:
         sync: false
       - key: SESSION_SECRET
         value: "i5vVTN3rl757mW5dMFkwV8nwAnkbVk1B"
+      - key: MAINTENANCE_MODE
+        value: "false"
       - key: BOT_API_URL
         value: "https://spainrp-oficial.onrender.com"
       - key: ECONOMIA_API_URL
