--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "shop": "node start-shop-simulator.js",
+    "maintenance:on": "node maintenance.js on",
+    "maintenance:off": "node maintenance.js off",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
