--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -24,6 +24,8 @@ services:
         sync: false
       - key: SESSION_SECRET
         value: "i5vVTN3rl757mW5dMFkwV8nwAnkbVk1B"
+      - key: JWT_SECRET
+        value: "spainrp_jwt_secret_key_2024_secure_production"
       - key: MAINTENANCE_MODE
         value: "false"
       - key: BOT_API_URL
