--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,52 @@
 {
   "rewrites": [
     {
-      "source": "/((?!api|assets|_next|_static|favicon.ico).*)",
+      "source": "/((?!api|assets|_next|_static|favicon.ico|robots.txt|manifest.json).*)",
       "destination": "/index.html"
     }
   ],
   "redirects": [
     {
-      "source": "/((?!api|assets|_next|_static|favicon.ico).*)",
+      "source": "/((?!api|assets|_next|_static|favicon.ico|robots.txt|manifest.json).*)",
       "destination": "/index.html",
       "permanent": false
+    }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "strict-origin-when-cross-origin"
+        }
+      ]
+    },
+    {
+      "source": "/index.html",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "no-cache, no-store, must-revalidate"
+        }
+      ]
+    },
+    {
+      "source": "/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
     }
   ]
 }
