Fix: Mejorar proxy DNI para soportar HEAD y GET requests - Agregar handler para HEAD request (verificacion de existencia) - Manejar correctamente ambos metodos GET y HEAD - URL del bot DNI: http://37.27.21.91:5021/dni/:discordId/exportar - Agregar variable DNI_BOT_URL al env.example - Logs mejorados con metodo HTTP y status del bot

--- a/backend/env.example
+++ b/backend/env.example
@@ -5,7 +5,8 @@ NODE_ENV=production
 # URLs de servicios externos
 PUBLIC_BASE_URL=https://spainrp-oficial.onrender.com
 BOT_API_URL=https://tu-bot.onrender.com
-BOLSA_API_URL=https://tu-bolsa.onrender.com
+BOLSA_API_URL=http://37.27.21.91:5021
+DNI_BOT_URL=http://37.27.21.91:5021
 ECONOMIA_API_URL=https://tu-economia.onrender.com
 
 # Discord
