Fix: Implementar proxy completo para BlackMarket (opción 2)
- Agregar rutas proxy en backend para todas las operaciones de BlackMarket
- Frontend ahora hace requests HTTPS al backend en lugar de HTTP directo al bot
- Soluciona problema de Mixed Content (HTTPS vs HTTP)
- Incluye proxy para: catálogo, saldo, compras, inventario, ventas, admin
- Actualizar env.example con BLACKMARKET_BOT_URL
- Todas las operaciones ahora pasan por el proxy del backend

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -29,7 +29,7 @@ services:
       - key: MAINTENANCE_MODE
         value: "false"
       - key: BOT_API_URL
-        value: "https://spainrp-web.onrender.com"
+        value: "https://spainrp-oficial.onrender.com"
       - key: ECONOMIA_API_URL
         value: "http://37.27.21.91:5021"
       - key: BOLSA_API_URL
