--- a/backend/env.example
+++ b/backend/env.example
@@ -7,6 +7,7 @@ PUBLIC_BASE_URL=https://spainrp-oficial.onrender.com
 BOT_API_URL=https://tu-bot.onrender.com
 BOLSA_API_URL=http://37.27.21.91:5021
 DNI_BOT_URL=http://37.27.21.91:5021
+BLACKMARKET_BOT_URL=http://37.27.21.91:5021
 ECONOMIA_API_URL=https://tu-economia.onrender.com
 
 # Discord
