--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "nodemailer": "^6.9.8",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
+    "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7"
   },
