--- a/backend/package.json
+++ b/backend/package.json
@@ -25,12 +25,13 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
-    "nodemailer": "^6.9.8",
+    "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "@sendgrid/mail": "^8.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
