--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.0",
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
@@ -30,8 +31,7 @@
     "passport-discord": "^0.1.4",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7",
-    "@sendgrid/mail": "^8.1.0"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
