--- a/backend/package.json
+++ b/backend/package.json
@@ -16,33 +16,22 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
-    "bcryptjs": "^3.0.2",
     "canvas": "^3.2.0",
-    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "discord.js": "^14.14.1",
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
-    "express-rate-limit": "^8.1.0",
     "express-session": "^1.18.1",
-    "express-slow-down": "^3.0.0",
-    "express-validator": "^7.2.1",
-    "helmet": "^8.1.0",
-    "ioredis": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
-    "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "node-cron": "^4.2.1",
     "node-fetch": "^3.3.2",
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
-    "redis": "^5.8.2",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
-    "sqlite3": "^5.1.7",
-    "winston": "^3.18.3"
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
