Fix API URLs and Roblox endpoint
- Fixed all API URLs from spainrp-web.onrender.com to spainrp-oficial.onrender.com
- Updated frontend configuration files (api.js, App.jsx, vite.config.js)
- Fixed CSP headers and preconnect URLs
- Improved Roblox profile endpoint to return 200 instead of 404 for unverified users
- Updated environment examples and deployment configs

--- a/frontend/render.yaml
+++ b/frontend/render.yaml
@@ -9,10 +9,10 @@ services:
         destination: "/index.html"
     envVars:
       - key: VITE_API_URL
-        value: https://spainrp-web.onrender.com
+        value: https://spainrp-oficial.onrender.com
       - key: VITE_BOT_URL
-        value: https://spainrp-web.onrender.com
+        value: https://spainrp-oficial.onrender.com
       - key: VITE_SHOP_URL
-        value: https://spainrp-web.onrender.com
+        value: https://spainrp-oficial.onrender.com
       - key: VITE_PPT_URL
-        value: https://spainrp-web.onrender.com
+        value: https://spainrp-oficial.onrender.com
