feat: Hacer página CNI totalmente responsive
Responsive Design Completo:
- Tablets (768px-1024px): Grid adaptativo, tabs flexibles, formularios optimizados
- Móviles grandes (481px-767px): Layout vertical, botones full-width, tabs apilados
- Móviles pequeños (320px-480px): Espaciado reducido, fuentes optimizadas
- Pantallas muy pequeñas (<320px): Elementos compactos, navegación táctil
- Orientación landscape: Layout horizontal optimizado para móviles
- Pantallas táctiles: Botones de 44px mínimo para mejor usabilidad

Mejoras específicas:
- Grid responsive con auto-fit y minmax
- Tabs que se adaptan de horizontal a vertical
- Formularios que cambian de multi-columna a single-columna
- Botones que se expanden a full-width en móviles
- Modal de bienvenida optimizado para todas las pantallas
- Cards de blog y empresas con layout adaptativo
- Sistema de rastreo con resultados apilados en móviles
- Acciones empresariales con botones apilados verticalmente

Optimizaciones táctiles:
- Elementos interactivos de mínimo 44px de altura
- Espaciado adecuado entre elementos táctiles
- Navegación optimizada para dedos
- Feedback visual mejorado en dispositivos táctiles

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,11 @@ vite.config.ts.timestamp-*
 
 # DNI Cache directory
 backend/cache/
+
+# SQLite databases
+*.db
+*.sqlite
+*.sqlite3
+backend/*.db
+backend/*.sqlite
+backend/*.sqlite3
