--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.22",
+    "jspdf": "^3.0.3",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -22,7 +23,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
