security: Mejorar protección de archivos de base de datos
GITIGNORE MEJORADO:
- Añadir patrones específicos para archivos SQLite (.db, .sqlite, .sqlite3)
- Incluir archivos de journal, WAL y SHM
- Excluir directorios de backups y exports
- Añadir archivos de configuración sensibles
- Incluir logs de base de datos

DOCUMENTACIÓN:
- Crear README completo para manejo de bases de datos
- Explicar por qué NO subir archivos .db a GitHub
- Instrucciones para desarrollo y producción
- Guía de seguridad y mejores prácticas

SCRIPTS DE VERIFICACIÓN:
- Script Node.js para verificar archivos de DB en repo
- Script batch para pre-commit en Windows
- Verificación automática antes de commits
- Prevención de subida accidental de archivos sensibles

SEGURIDAD:
- Confirmar que spainrp.db está en .gitignore
- Verificar que no hay archivos .db en el repositorio
- Documentar mejores prácticas de seguridad
- Crear sistema de prevención de errores

--- a/.gitignore
+++ b/.gitignore
@@ -141,10 +141,44 @@ vite.config.ts.timestamp-*
 # DNI Cache directory
 backend/cache/
 
-# SQLite databases
+# SQLite databases - NUNCA subir a GitHub
 *.db
 *.sqlite
 *.sqlite3
-backend/*.db
-backend/*.sqlite
-backend/*.sqlite3
+*.db-journal
+*.db-wal
+*.db-shm
+
+# Bases de datos específicas del proyecto
+backend/spainrp.db
+backend/spainrp.db-journal
+backend/spainrp.db-wal
+backend/spainrp.db-shm
+
+# Directorios de base de datos
+backend/db/data/
+backend/db/backups/
+backend/db/exports/
+
+# Archivos de base de datos en cualquier ubicación
+**/spainrp.db
+**/spainrp.db-journal
+**/spainrp.db-wal
+**/spainrp.db-shm
+
+# Archivos de configuración de base de datos (si contienen datos sensibles)
+backend/db/config.json
+backend/db/credentials.json
+
+# Logs de base de datos
+backend/logs/database.log
+backend/logs/db-*.log
+
+# Backups de base de datos (nunca subir)
+backend/db/backups/
+backend/db/exports/
+backend/db/dumps/
+
+# Archivos temporales de base de datos
+*.tmp
+*.temp
