--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@octokit/rest": "^22.0.0",
     "@sendgrid/mail": "^8.1.0",
     "canvas": "^3.2.0",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
+    "fs-extra": "^11.3.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.0",
     "multer": "^2.0.2",
@@ -29,6 +31,7 @@
     "nodemailer": "^6.10.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4",
+    "pg": "^8.16.3",
     "sharp": "^0.34.4",
     "socket.io": "^4.8.1",
     "sqlite3": "^5.1.7"
