--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.6",
+    "@react-three/fiber": "^9.3.0",
     "@supabase/supabase-js": "^2.57.2",
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "framer-motion": "^12.23.22",
     "jspdf": "^3.0.3",
+    "ogl": "^1.0.11",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
@@ -23,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "socket.io-client": "^4.8.1",
+    "three": "^0.180.0",
     "vite": "^6.3.5",
     "xlsx": "^0.18.5"
   },
